--- a/index.html
+++ b/index.html
@@ -7,12 +7,8 @@
   </head>
 
   <body>
-    <ul>
-      <li>12</li>
-      <li>12</li>
-      <li>12</li>
-      <li>12</li>
-    </ul>
+    <input type="button" value="点我">
+    <ul id="box"></ul>
     <script src="./index.js"></script>
   </body>
 </html>
